@@ -1,0 +1,17 @@
+﻿using Microsoft.EntityFrameworkCore;
+using System;
+using System.Collections.Generic;
+using System.Linq;
+using System.Text;
+using System.Threading.Tasks;
+
+namespace PizzaBraz.Infra.Context
+{
+    public class PizzaBrazContext : DbContext
+    {
+        public PizzaBrazContext()
+        {
+            
+        }
+    }
+}
