@@ -1,0 +1,17 @@
+﻿using PizzaBraz.Domain.Entities;
+using System;
+using System.Collections.Generic;
+using System.Linq;
+using System.Text;
+using System.Threading.Tasks;
+
+namespace PizzaBraz.Infra.Interfaces
+{
+    public interface IUserRepository : IBaseRepository<User>
+    {
+        Task<User> GetByEmail(string email);
+        Task<List<User>> GetByCompanyId(Guid companyId);
+        Task<List<User>> SearchByEmail(string email);
+        Task<List<User>> SearchByName(string name);
+    }
+}
