@@ -1,0 +1,66 @@
+﻿using Microsoft.EntityFrameworkCore;
+using PizzaBraz.Domain.Entities;
+using PizzaBraz.Infra.Context;
+using PizzaBraz.Infra.Interfaces;
+using System;
+using System.Collections.Generic;
+using System.Linq;
+using System.Text;
+using System.Threading.Tasks;
+
+namespace PizzaBraz.Infra.Repositories
+{
+    public class BaseRepository<T> : IBaseRepository<T> where T : Base
+    {
+        private readonly PizzaBrazContext _context;
+
+        public BaseRepository(PizzaBrazContext context)
+        {
+            _context = context;
+        }
+
+        public virtual async Task<T> Create(T obj)
+        {
+            _context.Add(obj);
+            await _context.SaveChangesAsync();
+
+            return obj;
+        }
+
+        public virtual async Task<T> Get(Guid id)
+        {
+            var obj = await _context.Set<T>()
+                                    .AsNoTracking()
+                                    .Where(x => x.Id == id)
+                                    .ToListAsync();
+            return obj.FirstOrDefault();
+        }
+
+        public virtual async Task<T> Update(T obj)
+        {
+            _context.Entry(obj).State = EntityState.Modified;
+            await _context.SaveChangesAsync();
+
+            return obj;
+        }
+
+        public virtual async Task Delete(Guid id)
+        {
+            var obj = await Get(id);
+
+            if (obj != null)
+            {
+                _context.Remove(obj);
+                await _context.SaveChangesAsync();
+            }
+        }
+
+        public virtual async Task<List<T>> GetAll()
+        {
+            var obj = await _context.Set<T>()
+                              .AsNoTracking()
+                              .ToListAsync();
+            return obj;
+        }
+    }
+}
